# cross-layer-csi-anomaly-detection

./: .env.example  .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  pyproject.toml  requirements.txt
configs/: ecommerce_esp32.yaml  ecommerce_raspberrypi.yaml  ieee_cis_esp32.yaml  ieee_cis_raspberrypi.yaml  sparkov_esp32.yaml  sparkov_raspberrypi.yaml
docs/: architecture.md  dataset_research.md
docs/paper/: README.md
docs/review_notes/: README.md
notebooks/: 01_bootstrap_datasets.ipynb  01_transaction_baselines.ipynb  02_csi_preprocessing.ipynb  03_csi_user_identification.ipynb  04_tx_csi_fusion.ipynb  05_results_analysis.ipynb  README.md
scripts/: run_ecommerce.sh  run_ieee_cis.sh  run_sparkov.sh
src/cross_layer_csi/: __init__.py  cli.py
src/cross_layer_csi/core/: __init__.py  paths.py
src/cross_layer_csi/csi/: __init__.py  analyzer.py  config.py  converter.py  downloader.py  filter.py  harmonizer.py  smoothing.py
src/cross_layer_csi/experiments/: __init__.py  registry.py
src/cross_layer_csi/pipelines/: __init__.py  csi.py  tabular.py
src/cross_layer_csi/tabular/: __init__.py  config.py  kaggle.py  models.py  pipeline.py  profiling.py  reporting.py  research.py  utils.py
src/csi_payment_attestation/: __init__.py  config.py  paths.py
src/csi_payment_attestation/data/: download_ieee_cis.py  load_csi.py  (+3 more)
src/multidataset_fraud/: cli.py  config.py  kaggle.py  models.py  pipeline.py  profiling.py  reporting.py  research.py  utils.py
tests/: test_config.py  test_csi_processing.py  test_paths.py  test_reporting.py  test_uid_builders.py
(+27 files in other folders)
